lib/web-app/src/data/security-group-data.json
{
  "SecurityGroups": [
    {
      "Description": "Allows SSH access from anywhere",
      "GroupName": "BastionSshGroup",
      "IpPermissions": [
        {
          "FromPort": 22,
          "IpProtocol": "tcp",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "SSH from anywhere"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0",
              "Description": "SSH from anywhere"
            }
          ],
          "PrefixListIds": [],
          "ToPort": 22,
          "UserIdGroupPairs": []
        }
      ],
      "OwnerId": "156522910806",
      "GroupId": "sg-031a603d9dae968af",
      "IpPermissionsEgress": [],
      "VpcId": "vpc-859cd4e2"
    },
    {
      "Description": "Allows all outbound traffic to external destinations, i.e. the public internet.",
      "GroupName": "OpenInternetAccess",
      "IpPermissions": [],
      "OwnerId": "156522910806",
      "GroupId": "sg-0eb0475b9b2dc5ba2",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Open Internet"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0",
              "Description": "Open Internet"
            }
          ],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "VpcId": "vpc-859cd4e2"
    },
    {
      "Description": "Master group for Elastic MapReduce created on 2016-11-12T04:15:27.615Z",
      "GroupName": "ElasticMapReduce-master",
      "IpPermissions": [
        {
          "FromPort": 0,
          "IpProtocol": "tcp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        },
        {
          "FromPort": 8443,
          "IpProtocol": "tcp",
          "IpRanges": [
            {
              "CidrIp": "207.171.172.6/32"
            },
            {
              "CidrIp": "54.239.98.0/24"
            },
            {
              "CidrIp": "54.240.217.8/29"
            },
            {
              "CidrIp": "207.171.167.26/32"
            },
            {
              "CidrIp": "72.21.198.64/29"
            },
            {
              "CidrIp": "207.171.167.101/32"
            },
            {
              "CidrIp": "72.21.196.64/29"
            },
            {
              "CidrIp": "54.240.217.80/29"
            },
            {
              "CidrIp": "54.240.217.16/29"
            },
            {
              "CidrIp": "207.171.167.25/32"
            },
            {
              "CidrIp": "72.21.217.0/24"
            },
            {
              "CidrIp": "54.240.217.64/28"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 8443,
          "UserIdGroupPairs": []
        },
        {
          "FromPort": 0,
          "IpProtocol": "udp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        },
        {
          "FromPort": -1,
          "IpProtocol": "icmp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        }
      ],
      "OwnerId": "156522910806",
      "GroupId": "sg-6c2b8411",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "VpcId": "vpc-859cd4e2"
    },
    {
      "Description": "Slave group for Elastic MapReduce created on 2016-11-12T04:15:27.615Z",
      "GroupName": "ElasticMapReduce-slave",
      "IpPermissions": [
        {
          "FromPort": 0,
          "IpProtocol": "tcp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        },
        {
          "FromPort": 0,
          "IpProtocol": "udp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 65535,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        },
        {
          "FromPort": -1,
          "IpProtocol": "icmp",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": -1,
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-6c2b8411",
              "UserId": "156522910806"
            },
            {
              "GroupId": "sg-6f2b8412",
              "UserId": "156522910806"
            }
          ]
        }
      ],
      "OwnerId": "156522910806",
      "GroupId": "sg-6f2b8412",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "VpcId": "vpc-859cd4e2"
    },
    {
      "Description": "default VPC security group",
      "GroupName": "default",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-a81899d2",
              "UserId": "156522910806"
            }
          ]
        }
      ],
      "OwnerId": "156522910806",
      "GroupId": "sg-a81899d2",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "172.32.0.0/16"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "VpcId": "vpc-859cd4e2"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "bda3e985-bd31-427d-8e6d-5b4d4dd3e35c",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "bda3e985-bd31-427d-8e6d-5b4d4dd3e35c",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "transfer-encoding": "chunked",
      "vary": "accept-encoding",
      "date": "Sun, 27 Dec 2020 17:59:42 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
